tests/errors/type_index/inner_inner_not_array.duck
type X = { name: String, inner: { lol: { x: String[] }} };
type Y = X[.inner][.lol][.x];

fn main() {
    let x: Y = "hallo";
}
